# ClassQuiz

./: .deepsource.toml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .tokeignore  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  Caddyfile  Caddyfile-docker  Dockerfile  Dockerfile.caddy  Pipfile  README.md  SocketIo.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  example_quiz.json  gunicorn_conf.py  image_cleanup.py  import_to_meili.py  init_db.py  live_redis_data.md  load-test.py  migration_to_rust.md  prestart.sh  pyproject.toml  pytest.ini  quiz_schema.json  run_tests.sh  run_tests2.sh  simulate_players.py  start.sh  temptest.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml
.reuse/: dep5
alembic/: env.py
app/: README.md  pubspec.yaml
backend/: Cargo.toml
backend/app/: Cargo.toml
backend/app/src/: main.rs
backend/live/: Cargo.toml
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs  models.rs
classquiz/: __init__.py  auth.py  cache.py  config (copy).py  config.py  helpers.py
docs/: SocketIo.md  live_redis_data.md
frontend/: .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc  Dockerfile  README.md  ar.json  ca.json  cs.json  de.json  en.json  es.json  eslint.config.cjs  et.json  eu.json  fr.json  hu.json  i18next-scanner.config.engine.cjs  id.json  it.json  ja.json  nb_NO.json  nl.json  nn.json  package-lock.json  package.json  pl.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  pt.json  ru.json  svelte.config.js  ta.json  tailwind.config.cjs  tr.json  tsconfig.json  (+7 more)
(+486 files in other folders)
