# SPDX-FileCopyrightText: 2023 Marlon W (Mawoka)
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { version = "0.18", features = ["derive"] }
garde = { version = "0.20", features = ["full"] }
